@@ -137,7 +137,7 @@ public class COJACBenchmark {
 
         Method m = cls.getMethod("setArray", int[].class);
 
-        m.invoke(instrumented, array);
+        m.invoke(instrumented, (Object) array);
     }
 
     private static void setImage(BufferedImage image, Object instrumented) throws Exception {
@@ -241,7 +241,7 @@ public class COJACBenchmark {
         Class<?> instanceClass = ClassLoader.getSystemClassLoader().loadClass(cls);
         // TODO: retransforming classes fails with our Wrapping mechanism, which modifies signatures...
         AgentTest.instrumentation.retransformClasses(instanceClass);
-        return (T) instanceClass.newInstance();
+        return (T) instanceClass.getDeclaredConstructor().newInstance();
     }
 
     private static Agent benchAgent() throws Exception {
@@ -256,7 +256,7 @@ public class COJACBenchmark {
         Agent agent = benchAgent();
         Runnable run=null;
         Callable<?> callable = null;
-        Object runnableOrCallable=null;
+        Object runnableOrCallable;
         if (runnable){
             runnableOrCallable = run = getFromAgentClassLoader(cls);   //COJACBenchmark.<Runnable> getFromAgentClassLoader(cls)
         } else {
